--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Arcanoid XL</title>
-    <style>
-    	* { padding: 0; margin: 0; }
-    	canvas { background: #eee; display: block; margin: 0 auto; }
-    </style>
+    <link rel="stylesheet" href="/styles/basic.css">
 </head>
 <body>
 
